--- a/Crudapplication/Views/Categories/Index.cshtml
+++ b/Crudapplication/Views/Categories/Index.cshtml
@@ -1,12 +1,29 @@
-﻿@section title {
+﻿
+@model List<Category>
+
+@section title {
     <h3>Categories</h3>
 }
-        <ul>
-            <li>
-                <a href="/categories/edit/1">Beverage</a>
-            </li>
-            <li>
-                <a href="/categories/edit/2">Meet</a>
-            </li>
-            <li></li>
-        </ul>
+
+@if (Model != null && Model.Count() > 0)
+{
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Description</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody class="table-group-divider">
+            @foreach(var category in Model)
+            {
+                <tr>
+                    <td>@category.Name</td>
+                    <td>@category.Description</td>
+                    <td><a class="btn btn-link" asp-controller="categories" asp-action="edit" asp-route-id="@category.CategoryId">Edit</a></td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
