--- a/Crudapplication/Views/Shared/_Layout.cshtml
+++ b/Crudapplication/Views/Shared/_Layout.cshtml
@@ -1,10 +1,11 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Supermarket Management</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="~/lib/bootstrap//dist/css/bootstrap.css"/>
 </head>
 <body>
     <header>
@@ -17,10 +18,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" aria-current="page" href="/home/index">Home</a>
+                            <a class="nav-link text-dark" aria-current="page" asp-controller="home" asp-action="index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/categories/index">Categories</a>
+                            <a class="nav-link text-dark" asp-controller="categories" asp-action="index">Categories</a>
                         </li>
                     </ul>
                 </div>
