--- a/Crudapplication/Views/Categories/Index.cshtml
+++ b/Crudapplication/Views/Categories/Index.cshtml
@@ -12,7 +12,7 @@
             <tr>
                 <th scope="col">Name</th>
                 <th scope="col">Description</th>
-                <th>Action</th>
+                <th scope="col">Action</th>
             </tr>
         </thead>
         <tbody class="table-group-divider">
@@ -21,9 +21,24 @@
                 <tr>
                     <td>@category.Name</td>
                     <td>@category.Description</td>
-                    <td><a class="btn btn-link" asp-controller="categories" asp-action="edit" asp-route-id="@category.CategoryId">Edit</a></td>
+                    <td>
+                        <a class="btn btn-outline-primary" asp-controller="categories" asp-action="edit" asp-route-id="@category.CategoryId">Edit</a>
+                        <a class="btn btn-outline-danger" asp-controller="categories" asp-action="delete" asp-route-id="@category.CategoryId" onclick="return confirmDelete()">Delete</a>
+                    </td>
                 </tr>
             }
         </tbody>
     </table>
+    <a class="btn btn-primary" asp-controller="categories" asp-action="add">Add</a>
+
+    
+}
+
+
+@section scripts {
+    <script>
+        function confirmDelete(){
+            return confirm("Are you sure to delete?");
+        }
+    </script>
 }
